<resources>
    <string name="app_name">逗鱼海钓</string>
    <string name="app_version">1.0</string>

    <!-- 通用 -->
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm">确认</string>
    <string name="sure">确定</string>
    <string name="net_error">网络不可用，请检查网络是否正常连接</string>
    <string name="empty_error">目前没有任何数据</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="remove">删除</string>
    <string name="common_error">出了点儿问题，请稍后再试</string>
    <string name="rmb">￥</string>
    <string name="at_least">起</string>
    <string name="string_null_error">请输入点儿什么...</string>
    <string name="operation_succ">操作成功</string>
    <string name="copy_succ">复制成功</string>
    <string name="contact">客服</string>


    <!-- 启动页 -->
    <string name="jump">跳过</string>

    <!-- 登录页 -->
    <string name="login_phone">手机号</string>
    <string name="login_pwd">密码</string>
    <string name="login_login">登录</string>
    <string name="login_reg">注册</string>
    <string name="login_getcode">获取验证码</string>
    <string name="login_codehint">请输入验证码</string>
    <string name="login_pwdhint">请输入密码</string>
    <string name="login_pwdnewhint">请输入新密码</string>
    <string name="login_change_type">账号密码登录</string>
    <string name="login_change_type_2">手机号快速登录</string>
    <string name="login_phone_error">电话号码长度不对</string>
    <string name="login_phone_empty">请输入电话号码</string>
    <string name="login_code_error">验证码长度不对</string>
    <string name="login_code_empty">请输入验证码</string>
    <string name="login_pwd_error">密码最少需要6位</string>
    <string name="login_pwd_empty">请输入密码</string>
    <string name="login_getcode_succ">验证码已通过短信方式发送到手机，请注意查收短信</string>

    <!-- 注册页 -->
    <string name="reg_phone">手机号</string>
    <string name="reg_pwd">密码</string>
    <string name="reg_conpwd">确认密码</string>
    <string name="reg_login">返回登录</string>
    <string name="reg_reg">注册</string>
    <string name="reg_code">验证码</string>
    <string name="reg_sendcode">发送验证码</string>

    <!-- 首页 -->
    <string name="main_first">商城</string>
    <string name="main_second">出海</string>
    <string name="main_third">首页</string>
    <string name="main_forth">热点</string>
    <string name="main_fifth">我的</string>

    <!-- 我的 -->
    <string name="mine_name">昵称：</string>
    <string name="mine_phone">电话：</string>
    <string name="mine_money">贝壳：</string>
    <string name="mine_level">头衔：</string>
    <string name="mine_exp">经验值</string>
    <string name="mine_edit">编辑资料</string>
    <string name="mine_order">商城订单</string>
    <string name="mine_cart">购物车</string>
    <string name="mine_record">出海行程</string>
    <string name="mine_rank">排行榜</string>
    <string name="mine_set">设置</string>
    <string name="mine_shell">我的贝壳币</string>
    <string name="mine_shell_count">余额：</string>
    <string name="mine_club">俱乐部</string>
    <string name="mine_level_1">浅滩抛手</string>
    <string name="mine_level_2">筏排小将</string>
    <string name="mine_level_3">攀礁能手</string>
    <string name="mine_level_4">船钓高手</string>
    <string name="mine_level_5">浅海船长</string>
    <string name="mine_level_6">渔中精灵</string>
    <string name="mine_level_7">浅海杆王</string>
    <string name="mine_level_8">深海先锋</string>
    <string name="mine_level_9">海中悍将</string>
    <string name="mine_level_10">护海神祗</string>

    <!-- 修改用户资料 -->
    <string name="edit_title">编辑资料</string>
    <string name="edit_name_hint">请输入昵称...</string>
    <string name="name_error">请输入昵称</string>


    <!-- 历史订单 -->
    <string name="order_title">商城订单</string>
    <string name="order_total_amount">合计：</string>
    <string name="order_status_daifukuan">待付款</string>
    <string name="order_status_yifukuan">待发货</string>
    <string name="order_status_yifahuo">已发货</string>
    <string name="order_status_yishouhuo">已收货</string>
    <string name="order_status_yipingjia">已评价</string>
    <string name="order_status_tuihuozhong">退货中</string>
    <string name="order_status_yituihuo">已退货</string>
    <string name="order_status_yiquxiao">已取消</string>
    <string name="order_time_close">分钟后关闭</string>
    <string name="order_no">订单号</string>
    <string name="order_btn_pay">支付</string>
    <string name="order_btn_cuidan">催单</string>
    <string name="order_btn_confirm">确认收货</string>
    <string name="order_btn_contact">申请售后</string>
    <string name="order_cuidan_succ">催单成功，请耐心等待客服处理</string>
    <string name="order_contact_phone">客服电话</string>
    <string name="order_contact_weixin">客服微信</string>

    <!-- club -->
    <string name="club_title">俱乐部</string>
    <string name="club_name_hint">姓名</string>
    <string name="club_phone_hint">电话</string>
    <string name="club_id_hint">身份证号</string>
    <string name="club_address">入会装备收货地址</string>
    <string name="club_address_txt">您还未添加收货地址去添加</string>
    <string name="club_submit">提交并付款</string>
    <string name="club_name_empty">请输入姓名</string>
    <string name="club_phone_empty">请输入电话</string>
    <string name="club_id_empty">请输入身份证号</string>
    <string name="club_address_empty">请选择一个地址</string>


    <!-- 出海记录 -->
    <string name="happylist_title">出海记录</string>
    <string name="happylist_state_all">全部</string>
    <string name="happylist_state_1">已评价</string>
    <string name="happylist_state_2">未评价</string>


    <!-- 经验值 -->
    <string name="exp_title">经验值</string>

    <!-- 排行榜 -->
    <string name="rank_title">排行榜</string>
    <string name="rank_state_1">鱼排行</string>
    <string name="rank_state_2">贝壳排行</string>

    <!-- 设置 -->
    <string name="set_title">设置</string>
    <string name="set_update_pwd">修改密码</string>
    <string name="set_remove">清除缓存</string>
    <string name="set_about">关于</string>
    <string name="set_quit">退出登录</string>

    <!-- 修改密码 -->
    <string name="updatepwd_title">修改密码</string>
    <string name="updatepwd_pwd_hint">请输入新密码</string>
    <string name="updatepwd_conpwd_hint">请再次输入密码</string>

    <!-- 关于 -->
    <string name="about_title">关于</string>

    <!-- 商城 -->
    <string name="shop_title">渔趣商城</string>
    <string name="shop_search_hint">搜索商城商品</string>
    <string name="shop_type_1">海产品</string>
    <string name="shop_type_2">海钓用具</string>
    <string name="shop_type_3">消耗用品</string>
    <string name="shop_selled">人已购</string>

    <!-- 商品详情 -->
    <string name="sd_select">选择</string>
    <string name="sd_select_default">选择 规格重量</string>
    <string name="sd_service">服务</string>
    <string name="sd_service_default">生鲜放心购服务</string>
    <string name="sd_detail">商品详情</string>
    <string name="sd_join_cart">加入购物车</string>
    <string name="sd_total_price">总价</string>
    <string name="sd_no_select">未选择</string>
    <string name="sd_select_count">数量选择</string>
    <string name="sd_count_one">最少得买一个</string>
    <string name="sd_count_ten">最多买十个</string>
    <string name="sd_join_cart_succ">加入购物车成功</string>
    <string name="sd_join_cart_succ_2">该商品已达购买上限</string>
    <string name="sd_selled">人已购买</string>
    <string name="sd_select_error">请先选择规格</string>
    <string name="sd_service1">生鲜类商品</string>
    <string name="sd_service2">非生鲜类商品</string>
    <string name="sd_service_baotui">坏单包退</string>
    <string name="sd_service_baotui_desc">签收后24小时内，商品腐坏变质，承诺24小时内处理，退换或换货</string>
    <string name="sd_service_base">基础服务</string>
    <string name="sd_service_base_1">顺丰冷链到家</string>
    <string name="sd_service_base_2">该商品不支持7天无理由退换货</string>
    <string name="sd_service_base_3">支持贝壳币购买</string>
    <string name="sd_service_tuihuan">该商品支持7天无理由退换</string>
    <string name="sd_service_tuihuan_desc">签收后24小时内，商品腐坏变质，承诺24小时内处理，退换或换货</string>
    <string name="sd_service_base_4">当天16:00前下单，当天发货</string>
    <string name="sd_service_base_5">支持贝壳币购买</string>
    <string name="sd_service_base_6">俱乐部会员支持免费寄存服务</string>

    <!-- 购物车 -->
    <string name="cart_title">购物车</string>
    <string name="cart_pay">支付</string>
    <string name="cart_invalid">商品已失效</string>
    <string name="cart_remove_succ">删除成功</string>
    <string name="cart_select_error">请选择一件商品</string>

    <!-- 确认订单 -->
    <string name="confirm_order_title">确认订单</string>
    <string name="confirm_pay_shell">贝壳币支付</string>
    <string name="confirm_pay_price">人民币支付</string>
    <string name="confirm_pay_shell_not_enough">贝壳币不足</string>
    <string name="confirm_pay_shell_succ">贝壳币支付成功</string>

    <!-- 收货地址 -->
    <string name="select_address_title">选择地址</string>
    <string name="select_new_address_title">请选择一个地址</string>
    <string name="select_postage">配送方式：</string>
    <string name="select_remark">备注：</string>
    <string name="select_remark_hint">如有特殊要求请备注说明</string>
    <string name="select_current">当前选择</string>
    <string name="select_name_hint">收货人：</string>
    <string name="select_address_hint">详细地址：</string>

    <!-- 编辑地址 or 添加地址 -->
    <string name="edit_address_title_1">添加地址</string>
    <string name="edit_address_title_2">编辑地址</string>
    <string name="edit_address_name_hint">收货人姓名</string>
    <string name="edit_address_phone_hint">电话</string>
    <string name="edit_address_province_hint">省</string>
    <string name="edit_address_city_hint">市</string>
    <string name="edit_address_district_hint">区、县</string>
    <string name="edit_address_detail_hint">详细地址：如道路、小区、门牌号、单元室</string>

    <string name="address_name_invalid">请输入收货人姓名</string>
    <string name="address_phone_invalid">请输入收货人电话</string>
    <string name="address_pcd_invalid">请选择省、市、区</string>
    <string name="address_address_invalid">请输入详细地址</string>


    <!-- 支付订单 -->
    <string name="pay_title">选择支付方式</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_succ">支付成功</string>
    <string name="pay_fail">支付失败</string>

    <!-- 热点 -->
    <string name="article_type_class">教程</string>
    <string name="article_type_info">资讯</string>
    <string name="article_title">详情</string>
    <string name="article_read_count">点击</string>
    <string name="article_search_hint">搜索文章</string>
    <string name="ad_select_default">选择 船只类型</string>
    <string name="ad_select">选择</string>
    <string name="ad_date">出发时间</string>
    <string name="ad_wanna">提交意向金</string>

    <!-- 预约出海 -->
    <string name="happy_title">预约出海</string>
    <string name="happy_into">点击进入</string>
    <string name="happy_money">意向金￥</string>
</resources>
