<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sky.happyf.activity.UpdatePwdActivity">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:centerText="@string/updatepwd_title"
        titlebar:centerType="textView"
        titlebar:leftDrawable="@drawable/comm_titlebar_back_normal"
        titlebar:leftDrawablePadding="0dp"
        titlebar:leftText="@string/back"
        titlebar:leftType="textView"
        titlebar:rightText="@string/save"
        titlebar:rightType="textView"
        titlebar:statusBarColor="@color/skyblue"
        titlebar:statusBarMode="light" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlebar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/updatepwd_pwd_hint" />

    <EditText
        android:id="@+id/et_conpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pwd"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/updatepwd_conpwd_hint" />


</RelativeLayout>
