<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sky.happyf.activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/iv_logo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/reg_phone" />

    <LinearLayout
        android:id="@+id/ll_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:weightSum="10"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="7"
            android:hint="@string/reg_code" />

        <Button
            android:id="@+id/btn_sendcode"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/reg_sendcode"
            />


    </LinearLayout>


    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll_code"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/reg_pwd" />


    <EditText
        android:id="@+id/et_conpwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_pwd"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/reg_conpwd" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_conpwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/reg_reg" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_reg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/reg_login" />


</RelativeLayout>
