<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="com.sky.happyf.activity.EditUserActivity">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:centerText="@string/edit_title"
        titlebar:centerType="textView"
        titlebar:leftDrawable="@drawable/comm_titlebar_back_normal"
        titlebar:leftDrawablePadding="0dp"
        titlebar:leftText="@string/back"
        titlebar:leftType="textView"
        titlebar:rightText="@string/save"
        titlebar:rightType="textView"
        titlebar:statusBarColor="@color/white"
        titlebar:statusBarMode="dark" />

    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/titlebar"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_boder">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:hint="@string/edit_name_hint"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="13dp"
            android:textColor="@color/gray_text_2"
            android:textColorHint="@color/gray_text_1"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="14sp" />

    </RelativeLayout>


</RelativeLayout>
