<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sky.happyf.activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/et_phone"
        android:layout_below="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/login_phone"/>

    <EditText
        android:id="@+id/et_pwd"
        android:layout_below="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/login_pwd"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_below="@id/et_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_login"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btn_reg"
        android:layout_below="@id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_reg"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
