<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sky.happyf.activity.AboutActivity">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:centerText="@string/about_title"
        titlebar:centerType="textView"
        titlebar:leftDrawable="@drawable/comm_titlebar_back_normal"
        titlebar:leftDrawablePadding="0dp"
        titlebar:leftText="@string/back"
        titlebar:leftType="textView"
        titlebar:statusBarColor="@color/skyblue"
        titlebar:statusBarMode="light" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/titlebar"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name" />


    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_appname"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_version" />


</RelativeLayout>
