<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context="com.sky.happyf.activity.SetActivity">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:centerText="@string/set_title"
        titlebar:centerType="textView"
        titlebar:leftDrawable="@drawable/comm_titlebar_back_normal"
        titlebar:leftDrawablePadding="0dp"
        titlebar:leftText="@string/back"
        titlebar:leftType="textView"
        titlebar:statusBarColor="@color/white"
        titlebar:statusBarMode="dark" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rl_updatepwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/free_dialog_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/set_update_pwd"
                android:textColor="@color/gray_text_2" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_remove"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/free_dialog_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/set_remove"
                android:textColor="@color/gray_text_2" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_about"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/free_dialog_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/set_about"
                android:textColor="@color/gray_text_2" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_quit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/free_dialog_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/set_quit"
                android:textColor="@color/gray_text_2" />

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
